Made changes to the AI team page

--- a/html/ai.html
+++ b/html/ai.html
@@ -52,10 +52,10 @@
                     <p class="name">Jasper Adrian Dwight V. Castro</p>
                     <p class="position">Project Technical Specialist IV - Natural Language Processing Engineer</p>
                     <p class="description">
-                        Educational Background: BS Electrical Engineering, Major in Electronics Engineering<br>
-                        Projects: iTANONG, GATES<br>
-                        Skills: Natural Language Processing, Machine Learning, Data Science<br>
-                        Motto: <i>"When you want something, all the universe conspires in helping you to achieve it."</i> - Steve Jobs
+                        <br>Educational Background: BS Electrical Engineering, Major in Electronics Engineering<br>
+                        <br>Projects: iTANONG, GATES<br>
+                        <br>Skills: Natural Language Processing, Machine Learning, Data Science<br>
+                        <br>Motto: <i>"When you want something, all the universe conspires in helping you to achieve it."</i> - Steve Jobs
                     </p>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <!--<p class="description">Description</p>-->
                 </div>
             </div>
 
