Tested modal for staff profiles

--- a/html/ai.html
+++ b/html/ai.html
@@ -69,7 +69,7 @@
                 <div class="profile-description">
                     <p class="name">Name</p>
                     <p class="position">Position</p>
-                    <!--<p class="description">Description</p>-->
+                    <p class="description">Description</p>
                 </div>
             </div>
 
