--- a/html/ai.html
+++ b/html/ai.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
     <script src="../js/components.js" defer></script>
     <script src="../js/search.js" defer></script>
 </head>
