Made changes to staff profile UI, and added all staff information for all teams

--- a/html/interns.html
+++ b/html/interns.html
@@ -6,10 +6,10 @@
     <title>Interns | GATES</title>
     <link rel="stylesheet" href="../css/interns.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel ="stylesheet" href="../css/modal.css">
+    <link rel ="stylesheet" href="../css/our-team-modal.css">
     <script src="../js/components.js"></script>
     <script src="../js/redirect.js"></script>
-    <script src="../js/modal.js" defer></script>
+    <script src="../js/our-team-modal.js" defer></script>
 
 </head>
 <body>
@@ -20,18 +20,14 @@
         <br>
         
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Joshua P. Birad" data-caption="Joshua P. Birad - Intern">
+            <div class="profile-card" onclick="showStaffModal('joshua-birad')">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Joshua P. Birad">
                 <div class="profile-description">
                     <p class="name">Joshua P. Birad</p>
                     <p class="position">Intern</p>
-                    <p class="description">Educational Background: Technological University of the Philippines
-                        <br>Projects: GATES
-                        <br>Skills: Data Cleaning, Git, Front-end Development
-                    </p>
                 </div>
             </div>
-
+<!--
             <div class="profile-card">
                 <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
                 <div class="profile-description">
@@ -79,9 +75,17 @@
                     <p class="position">Position</p>
                     <p class="description">Description</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
+    <div id="staffModal" class="staff-modal">
+        <div class="staff-modal-content">
+            <span class="close" onclick="closeStaffModal()">&times;</span>
+            <div id="staffModalBody">
+                <!-- Staff details will be dynamically inserted here -->
+            </div>
+        </div>
+    </div>
     <div id="footer"></div>
 </body>
 </html>
