Fixed header, and combined the corresponding JS files into one

--- a/html/platform.html
+++ b/html/platform.html
@@ -8,29 +8,20 @@
     <title>Platform Team | GATES Project</title>
     <link rel="stylesheet" href="../css/platform.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/our-team-modal.css">
-
-    <script src="../js/components.js"></script>
-    <link rel="stylesheet" href="../css/search.css">
-    <link rel="stylesheet" href="../css/modal.css">
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-  
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
     
-    <script src="../js/components.js" defer></script>
-    <script src="../js/search.js" defer></script>
-    <script src="../js/redirect.js"></script>
-    <script src="../js/our-team-modal.js"></script>
+    <script src="../js/navbar-loader.js" defer></script>
+    <script src="../js/our-team-modal.js" defer></script>
 
 </head>
 
 <body>
     <div id="navbar"></div>
-    <script src="../js/navbar-loader.js"></script>
     <main>
         <h1 class="team-name">PLATFORM TEAM</h1>
         <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
