--- a/html/ai.html
+++ b/html/ai.html
@@ -7,7 +7,6 @@
     <title>AI Team | GATES Project</title>
     <link rel="stylesheet" href="../css/ai.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/our-team-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +14,7 @@
     <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
   
 
-    <script src="../js/components.js" defer></script>
-    <script src="../js/search.js" defer></script>
+    <script src="../js/navbar-loader.js" defer></script>
     <script src="../js/redirect.js" defer></script>
     <script src="../js/our-team-modal.js" defer></script>
 
@@ -24,7 +22,6 @@
 
 <body>
     <div id="navbar"></div>
-    <script src="../js/navbar-loader.js"></script>
     <main>
         <h1 class="team-name">AI TEAM</h1>
         <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
