--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <title>GATES | DOST-ASTI</title>
 
   <!-- CSS Files -->
-  <link rel="stylesheet" href="../css/components.css" />
-  <link rel="stylesheet" href="../css/home.css" />
-  <link rel="stylesheet" href="../css/search.css" />
-  <link rel="stylesheet" href="../css/header-footer.css" />
-  <link rel="stylesheet" href="../css/slideshow.css" />
-  <link rel="stylesheet" href="../css/navbar.css" />
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="css/search.css" />
+  <link rel="stylesheet" href="css/header-footer.css" />
+  <link rel="stylesheet" href="css/slideshow.css" />
+  <link rel="stylesheet" href="css/navbar.css" />
 
   <!-- Fonts & Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -20,16 +20,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  <link rel="icon" type="image/png" href="../images/Storm_Cloud.png" />
+  <link rel="icon" type="image/png" href="images/Storm_Cloud.png" />
 
   <!-- JavaScript Files -->
-  <script src="../js/components.js" defer></script>
-  <script src="../js/search.js" defer></script>
-  <script src="../js/page-indicator.js" defer></script>
-  <script src="../js/redirect.js" defer></script>
-  <script src="../js/slideshow.js" defer></script>
-  <script src="../js/scroll.js" defer></script>
-  <script src="../js/scroll-animation.js" defer></script>
+  <script src="js/navbar-loader.js" defer></script>
+  <script src="js/slideshow.js" defer></script>
+  <script src="js/scroll.js" defer></script>
+  <script src="js/scroll-animation.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
@@ -41,13 +38,13 @@
     <!-- === SLIDESHOW === -->
     <div class="slideshow-container">
       <div class="slide fade">
-        <img src="../images/img1.jpg" alt="Slide 1">
+        <img src="images/img1.jpg" alt="Slide 1">
       </div>
       <div class="slide fade">
-        <img src="../images/img2.jpg" alt="Slide 2">
+        <img src="images/img2.jpg" alt="Slide 2">
       </div>
       <div class="slide fade">
-        <img src="../images/img3.jpg" alt="Slide 3">
+        <img src="images/img3.jpg" alt="Slide 3">
       </div>
 
       <!-- Arrows -->
