--- a/html/ai.html
+++ b/html/ai.html
@@ -30,7 +30,8 @@
 
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/ai-team_alyssa_ocampo.png" alt="Alyssa Patricia B. Ocampo">
+                <img class="profile-pic modal-trigger" src="../images/ai-team_alyssa_ocampo.png"
+                    alt="Alyssa Patricia B. Ocampo">
                 <div class="profile-description">
                     <p class="name">Alyssa Patricia B. Ocampo</p>
                     <p class="position">Project Technical Specialist I - Data and Machine Learning Engineer</p>
@@ -44,7 +45,8 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/ai-team_christoper-belaos.PNG" alt="Christopher Belaos">
+                <img class="profile-pic modal-trigger" src="../images/ai-team_christoper-belaos.PNG"
+                    alt="Christopher Belaos">
                 <div class="profile-description">
                     <p class="name">Christopher Belaos</p>
                     <p class="position">Project Technical Specialist III - AI Engineer</p>
@@ -55,7 +57,8 @@
             </div>
 
             <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
+                <img class="profile-pic modal-trigger" src="../images/ai-team_jasper-castro.png"
+                    alt="Jasper Adrian Dwight V. Castro">
                 <div class="profile-description">
                     <p class="name">Jasper Adrian Dwight V. Castro</p>
                     <p class="position">Project Technical Specialist IV - Natural Language Processing Engineer</p>
@@ -63,7 +66,8 @@
                         Educational Background: BS Electrical Engineering, Major in Electronics Engineering<br>
                         Projects: iTANONG, GATES<br>
                         Skills: Natural Language Processing, Machine Learning, Data Science<br>
-                        Motto: <i>"When you want something, all the universe conspires in helping you to achieve it."</i> - Steve Jobs
+                        Motto: <i>"When you want something, all the universe conspires in helping you to achieve
+                            it."</i> - Steve Jobs
                     </p>
                 </div>
             </div>
