--- a/html/interns.html
+++ b/html/interns.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interns | GATES</title>
     <link rel="stylesheet" href="../css/interns.css">
     <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel ="stylesheet" href="../css/modal.css">
+    <link rel="stylesheet" href="../css/modal.css">
     <script src="../js/components.js"></script>
     <script src="../js/redirect.js"></script>
     <script src="../js/modal.js" defer></script>
 
 </head>
+
 <body>
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">INTERNS</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui officia deserunt mollit anim id est laborum.</p>
         <br>
-        
+
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Joshua P. Birad" data-caption="Joshua P. Birad - Intern">
+                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Joshua P. Birad"
+                    data-caption="Joshua P. Birad - Intern">
                 <div class="profile-description">
                     <p class="name">Joshua P. Birad</p>
                     <p class="position">Intern</p>
@@ -51,7 +58,7 @@
             </div>
         </div>
 
-        
+
 
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card">
@@ -84,4 +91,5 @@
     </main>
     <div id="footer"></div>
 </body>
+
 </html>
