--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us | GATES Project</title>
+    <link rel="stylesheet" href="../css/header-footer.css" />
+    <link rel="stylesheet" href="../css/search.css" />
     <link rel="stylesheet" href="../css/Contact-Us-style.css" />
-    <link rel="stylesheet" href="../css/header-footer.css" />
-    <script src="../js/components.js"></script>
-    <script src="../js/redirect.js"></script>
-
-
-    <link rel="stylesheet" href="../css/header-footer.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <title>Contact Us | GATES Project</title>
+    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
+  
+    <script src="../js/navbar-loader.js" defer></script>
 </head>
 
 <body>
     <div id="navbar"></div>
-    <script src="../js/navbar-loader.js" defer></script>
     <div class="contact-section">
         <h2 class="contact-heading">CONTACT US</h2>
         <div class="contact-table-container">
