Added the profiles of missing staff members (incomplete info)

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -103,7 +103,7 @@
                                 <div class="progress-bar">
                                     <div class="progress-fill ai-progress" data-progress="74"></div>
                                 </div>
-                                <span class="progress-percentage">74% Correct</span>
+                                <span class="progress-percentage">74% Complete</span>
                             </div>
                         </div>
                         <div class="progress-item">
@@ -115,7 +115,7 @@
                                 <div class="progress-bar">
                                     <div class="progress-fill website-progress" data-progress="52"></div>
                                 </div>
-                                <span class="progress-percentage">52% Correct</span>
+                                <span class="progress-percentage">52% Complete</span>
                             </div>
                         </div>
                         <div class="progress-item">
@@ -127,6 +127,7 @@
                                 <div class="progress-bar">
                                     <div class="progress-fill lakehouse-progress" data-progress="36"></div>
                                 </div>
+                                <span class="progress-percentage">36% Complete</span>
                             </div>
                         </div>
                     </div>
