--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -33,24 +33,29 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>John Chris T. Kwong</td>
+                            <td>Alvin E. Retamar</td>
                             <td>Position</td>
+                            <td>Email</td>
+                        </tr>
+                        <tr>
+                            <td>John Chris T. Kwong</td>
+                            <td>S&T Fellow I</td>
                             <td>johnchris.kwong@asti.dost.gov.ph</td>
                         </tr>
                         <tr>
-                            <td>Alyssa Patricia Ocampo</td>
+                            <td>Charmaine Ann S. Manalo</td>
+                            <td>Project Technical Specialist IV / Senior Project Manager</td>
+                            <td>ann@asti.dost.gov.ph</td>
+                        </tr>
+                        <tr>
+                            <td>Chelsea Rica M. Abellana</td>
+                            <td>Project Technical Assistant VI - Junior Technology, Policy, and Sustainability Officer</td>
+                            <td>chelsearica.abellana@asti.dost.gov.ph</td>
+                        </tr>
+                        <tr>
+                            <td>Marvie Joy C. Evangelista</td>
                             <td>Position</td>
-                            <td>alyssapatricia.ocampo@asti.dost.gov.ph</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>Developer</td>
-                            <td>@asti.dost.gov.ph</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>Researcher</td>
-                            <td>@asti.dost.gov.ph</td>
+                            <td>Email</td>
                         </tr>
                     </tbody>
                 </table>
