--- a/html/interns.html
+++ b/html/interns.html
@@ -34,57 +34,42 @@
                     <p class="position">Intern</p>
                 </div>
             </div>
-            </div>
-<!--
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
+            <div class="profile-card" onclick="showStaffModal('janelle-lam')">
+                <img class="profile-pic" src="../images/josh.jpeg" alt="Name">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Janelle Lam</p>
+                    <p class="position">Intern</p>
                 </div>
             </div>
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg">
+            <div class="profile-card" onclick="showStaffModal('nathan-lim')">
+                <img class="profile-pic" src="../images/josh.jpeg" alt="Nathan Lim">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Nathan Lim</p>
+                    <p class="position">Intern</p>
                 </div>
             </div>
         </div>
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
+            <div class="profile-card" onclick="showStaffModal('matt-ormilon')">
+                <img class="profile-pic" src="../images/josh.jpeg" alt="Matthew Ormilon">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Matthew Ormilon</p>
+                    <p class="position">Intern</p>
                 </div>
             </div>
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
+            <div class="profile-card" onclick="showStaffModal('pauline-young')">
+                <img class="profile-pic" src="../images/josh.jpeg" alt="Pauline Young">
                 <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
+                    <p class="name">Pauline Young</p>
+                    <p class="position">Intern</p>
                 </div>
             </div>
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
-                </div>
-            </div> -->
         </div>
     </main>
     <div id="staffModal" class="staff-modal">
         <div class="staff-modal-content">
             <span class="close" onclick="closeStaffModal()">&times;</span>
             <div id="staffModalBody">
-                <!-- Staff details will be dynamically inserted here -->
             </div>
         </div>
     </div>
