--- a/html/lakehouse.html
+++ b/html/lakehouse.html
@@ -34,63 +34,26 @@
 
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('jean-jay-quitayen')">
-                <img class="profile-pic modal-trigger" src="../images/lakehouse_jean-jay-quitayen.jpeg" alt="Name of Team Member">
+                <img class="profile-pic" src="../images/lakehouse_jean-jay-quitayen.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Jean Jay Quitayen</p>
                     <p class="position">Supervising Project Technical Specialist</p>
                 </div>
             </div>
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/lakehouse_ruben-capuli.jpg" alt="Name of Team Member">
-                <div class="profile-description" onclick="showStaffModal('ruben-capuli')">
+            <div class="profile-card" onclick="showStaffModal('ruben-capuli')">
+                <img class="profile-pic" src="../images/lakehouse_ruben-capuli.jpg" alt="Name of Team Member">
+                <div class="profile-description">
                     <p class="name">Ruben L. Capuli III</p>
                     <p class="position">Project Technical Assistant IV - Jr. Network Engineer</p>
                 </div>
             </div>
-        </div> <!-- REMOVE -->
-<!--
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="background-image: url('../images/stock-2.jpg');">
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
-                </div>
-            </div>
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
-                </div>
-            </div>
-            <div class="profile-card">
-                <img class="profile-pic modal-trigger" src="../images/josh.jpeg" alt="Name of Team Member">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Position</p>
-                    <p class="description">Description</p>
-                </div>
-            </div>
-        </div>
-    -->
+        </div> 
     </main>
     <div id="staffModal" class="staff-modal">
         <div class="staff-modal-content">
             <span class="close" onclick="closeStaffModal()">&times;</span>
             <div id="staffModalBody">
-                <!-- Staff details will be dynamically inserted here -->
+                <!-- Staff details will be inserted here -->
             </div>
         </div>
     </div>
