--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="slideshow-overlay">
             <div class="overlay-content">
                 <h1 class="overlay-title">Welcome to the GATES Project</h1>
-                <p class="overlay-subtitle">Department of Science and Technology Institute - Advance Science and
+                <p class="overlay-subtitle">Department of Science and Technology Institute - Advanced Science and
                     Technology Institute </p>
             </div>
         </div>
