--- a/html/ai.html
+++ b/html/ai.html
@@ -34,19 +34,27 @@
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             
 
-            <div class="profile-card" onclick="showStaffModal('christopher-belaos')">
-                <img class="profile-pic" src="../images/ai-team_christopher-belaos.PNG" alt="Christopher Belaos">
-                <div class="profile-description">
-                    <p class="name">Christopher Belaos</p>
-                    <p class="position">Project Technical Specialist III - AI Engineer</p>
-                </div>
-            </div>
-
             <div class="profile-card" onclick="showStaffModal('jasper-castro')">
                 <img class="profile-pic" src="../images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
                 <div class="profile-description">
                     <p class="name">Jasper Adrian Dwight V. Castro</p>
                     <p class="position">Project Technical Specialist IV - Natural Language Processing Engineer</p>
+                </div>
+            </div>
+
+            <div class="profile-card" onclick="showStaffModal('john-dumalag')">
+                <img class="profile-pic" src="../images/josh.jpeg" alt="John Bart C. Dumalag">
+                <div class="profile-description">
+                    <p class="name">John Bart C. Dumalag</p>
+                    <p class="position">Position</p>
+                </div>
+            </div>
+
+            <div class="profile-card" onclick="showStaffModal('christopher-belaos')">
+                <img class="profile-pic" src="../images/ai-team_christopher-belaos.PNG" alt="Christopher Belaos">
+                <div class="profile-description">
+                    <p class="name">Christopher Belaos</p>
+                    <p class="position">Project Technical Specialist III - AI Engineer</p>
                 </div>
             </div>
         </div>
@@ -69,24 +77,6 @@
                     <p class="position">Project Technical Assistant IV - Jr. Data Engineer</p>
                 </div>
             </div>
-<!--
-            <div class="profile-card" onclick="showStaffModal('john')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Name of Team Member">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Project Technical Assistant IV; Jr. Data Engineer</p>
-                </div>
-            </div>
-
-            <div class="profile-card" onclick="showStaffModal('john')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Name of Team Member">
-                <div class="profile-description">
-                    <p class="name">Name</p>
-                    <p class="position">Project Technical Assistant IV; Jr. Data Engineer</p>
-                </div>
-            </div>
-        </div>
-    -->
         </div>
     </main>
     <div id="staffModal" class="staff-modal">
