Updated mission vision

--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -6,31 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Mission & Vision | GATES Project</title>
-  
+
   <link rel="stylesheet" href="../css/header-footer.css">
-  <link rel="stylesheet" href="../css/mission-vision-styleguide.css">
   <link rel="stylesheet" href="../css/mission-vision.css">
-  <link rel="stylesheet" href="../css/search.css">
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
-  
+  <link rel="icon" type="image/png" href="../images/asti-logo.png">
+  <script src="../js/loadFooter.js" defer></script>
   <script src="../js/navbar-loader.js" defer></script>
 
 </head>
 
 <body>
   <div id="navbar"></div>
-
-  <div class="mission-vision">
+  <section class="mission-vision">
     <div class="overlap"
       style="background-image: url('../images/Frame 2.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
       <div class="overlap-wrapper">
         <div class="overlap-2">
           <div class="mission-holder"></div>
-          <div class="text-wrapper-2">MISSION</div>
+          <h2 class="text-wrapper-2">MISSION</h2>
           <p class="text-wrapper-3">
             Our sole mission is to drive research and innovation by
             developing relevant technology-driven solutions with
@@ -41,7 +37,7 @@
       <div class="group">
         <div class="overlap-group">
           <div class="vision-holder"></div>
-          <div class="text-wrapper">VISION</div>
+          <h2 class="text-wrapper">VISION</h2>
           <p class="p">
             Our vision is to be a world-class leader in emerging
             technologies, research and innovation.
@@ -49,22 +45,8 @@
         </div>
       </div>
     </div>
-  </div>
-  </div>
-  </div>
+  </section>
   <div id="footer"></div>
-
 </body>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<div id="footer"></div>
 
-=======
->>>>>>> 693b837751a3edfcb59ce04f9310700176906f30
-=======
-=======
-<div id="footer"></div>
-
->>>>>>> c61726929e1b3ebf104693b4bcffff8130053506
->>>>>>> 4bb4d864e1bd8fdbf4f1fff602b513130626ef07
 </html>
