Updated href links for deployment

--- a/html/lakehouse.html
+++ b/html/lakehouse.html
@@ -7,21 +7,18 @@
 
     <title>Lakehouse Team | GATES Project</title>
   
-    <link rel="stylesheet" href="../css/lakehouse.css">
-    <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/search.css">
-    <link rel="stylesheet" href="../css/our-team-modal.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/lakehouse.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/our-team-modal.css">
 
-    <script src="../js/components.js" defer></script>
-    <script src="../js/redirect.js" defer></script>
-    <script src="../js/modal.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
-    
-    <script src="../js/navbar-loader.js" defer></script>
-    <script src="../js/our-team-modal.js" defer></script>
+    <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/Storm_Cloud.png">
+
+    <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/our-team-modal.js" defer></script>
 
 </head>
 
@@ -34,16 +31,16 @@
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
             qui officia deserunt mollit anim id est laborum.</p>
-        <div class="card" style="background-image: url('../images/stock-1.jpg');">
+        <div class="card" style="background-image: url('../asti-gates-profile.github.io/images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('jean-jay-quitayen')">
-                <img class="profile-pic" src="../images/lakehouse_jean-jay-quitayen.jpeg" alt="Name of Team Member">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/lakehouse_jean-jay-quitayen.jpeg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Jean Jay Quitayen</p>
                     <p class="position">Supervising Project Technical Specialist</p>
                 </div>
             </div>
             <div class="profile-card" onclick="showStaffModal('ruben-capuli')">
-                <img class="profile-pic" src="../images/lakehouse_ruben-capuli.jpg" alt="Name of Team Member">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/lakehouse_ruben-capuli.jpg" alt="Name of Team Member">
                 <div class="profile-description">
                     <p class="name">Ruben L. Capuli III</p>
                     <p class="position">Project Technical Assistant IV - Jr. Network Engineer</p>
