--- a/html/management.html
+++ b/html/management.html
@@ -9,17 +9,17 @@
 
     <title>Management | GATES</title>
 
-    <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/our-team-modal.css">
-    <link rel="stylesheet" href="../css/management.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/our-team-modal.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/management.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
+    <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/Storm_Cloud.png">
   
 
-    <script src="../js/navbar-loader.js" defer></script>
-    <script src="../js/our-team-modal.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/our-team-modal.js" defer></script>
 
 </head>
 
@@ -34,10 +34,10 @@
             qui officia deserunt mollit anim id est laborum.</p>
         <br>
 
-        <div class="card" style="background-image: url('../images/stock-1.jpg');">
+        <div class="card" style="background-image: url('../asti-gates-profile.github.io/images/stock-1.jpg');">
             
             <div class="profile-card" onclick="showStaffModal('alvin-retamar')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Alvin E. Retamar">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/josh.jpeg" alt="Alvin E. Retamar">
                 <div class="profile-description">
                     <p class="name">Alvin E. Retamar</p>
                     <p class="position">Position</p>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="profile-card" onclick="showStaffModal('john-chris-kwong')">
-                <img class="profile-pic" src="../images/management_john-chris-kwong.jpg" alt="John Chris Kwong">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/management_john-chris-kwong.jpg" alt="John Chris Kwong">
                 <div class="profile-description">
                     <p class="name">John Chris Kwong</p>
                     <p class="position">S&T Fellow I</p>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="profile-card" onclick="showStaffModal('charmaine-manalo')">
-                <img class="profile-pic" src="../images/management_ann-manalo.jpg" alt="Charmaine Ann Manalo">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/management_ann-manalo.jpg" alt="Charmaine Ann Manalo">
                 <div class="profile-description">
                     <p class="name">Charmaine Ann S. Manalo</p>
                     <p class="position">Project Technical Specialist IV - Senior Project Manager</p>
@@ -61,9 +61,9 @@
             </div>
         </div>
 
-        <div class="card" style="background-image: url('../images/stock-2.jpg');">
+        <div class="card" style="background-image: url('../asti-gates-profile.github.io/images/stock-2.jpg');">
             <div class="profile-card" onclick="showStaffModal('chelsea-abellana')">
-                <img class="profile-pic" src="../images/management_chelsea-abellana.jpg" alt="Chelsea Abellana">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/management_chelsea-abellana.jpg" alt="Chelsea Abellana">
                 <div class="profile-description">
                     <p class="name">Chelsea Rica M. Abellana</p>
                     <p class="position">Project Technical Assistant VI - Junior Technology, Policy, and Sustainability Officer</p>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="profile-card" onclick="showStaffModal('marvie-evangelista')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Marvie Joy C. Evangelista">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/josh.jpeg" alt="Marvie Joy C. Evangelista">
                 <div class="profile-description">
                     <p class="name">Marvie Joy C. Evangelista</p>
                     <p class="position">Position</p>
