--- a/html/platform.html
+++ b/html/platform.html
@@ -7,25 +7,22 @@
 
     <title>Platform Team | GATES</title>
 
-    <link rel="stylesheet" href="../css/platform.css">
-    <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/search.css">
-    <link rel="stylesheet" href="../css/modal.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/platform.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/modal.css">
 
-
-    <script src="../js/redirect.js"></script>
-    <script src="../js/modal.js"></script>
 
     <title>Platform Team | GATES Project</title>
-    <link rel="stylesheet" href="../css/platform.css">
-    <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/our-team-modal.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/platform.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/our-team-modal.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
+    <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/Storm_Cloud.png">
     
-    <script src="../js/navbar-loader.js" defer></script>
-    <script src="../js/our-team-modal.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/our-team-modal.js" defer></script>
 </head>
 
 <body>
