--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About GATES | DOST-ASTI</title>
-    <link rel="stylesheet" href="../css/header-footer.css" />
-    <link rel="stylesheet" href="../css/search.css">
-    <link rel="stylesheet" href="../css/about-gates.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/about-gates.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
-    <script src="../js/navbar-loader.js" defer></script>
-    <script src="../js/dashboard.js"></script>
+    <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/Storm_Cloud.png">
+    <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/dashboard.js"></script>
     <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="../css/dashboard.css" />
-    <link rel="stylesheet" href="../css/dashboard-widget.css" />
-    <script src="../js/dashboard-widget.js" defer></script>
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/dashboard.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/dashboard-widget.css" />
+    <script src="../asti-gates-profile.github.io/js/dashboard-widget.js" defer></script>
 
 </head>
 </head>
@@ -160,8 +160,8 @@
                         </div>
                     </div>
 
-                    <link rel="stylesheet" href="stats.css">
-                    <script src="stats.js"></script>
+                    <link rel="stylesheet" href="../asti-gates-profile.github.io/stats.css">
+                    <script src="../asti-gates-profile.github.io/stats.js"></script>
 
                 </div>
             </div>
@@ -169,19 +169,19 @@
             <section class="team">
                 <h2>LEARN MORE ABOUT THE TEAM</h2>
                 <div class="cards">
-                    <a href="ai.html" class="card ai">
+                    <a href="../asti-gates-profile.github.io/ai.html" class="card ai">
                         <button>AI</button>
                     </a>
-                    <a href="platform.html" class="card platform">
+                    <a href="../asti-gates-profile.github.io/platform.html" class="card platform">
                         <button>PLATFORM</button>
                     </a>
-                    <a href="lakehouse.html" class="card lakehouse">
+                    <a href="../asti-gates-profile.github.io/lakehouse.html" class="card lakehouse">
                         <button>LAKEHOUSE</button>
                     </a>
-                    <a href="management.html" class="card management">
+                    <a href="../asti-gates-profile.github.io/management.html" class="card management">
                         <button>MANAGEMENT</button>
                     </a>
-                    <a href="interns.html" class="card interns">
+                    <a href="../asti-gates-profile.github.io/interns.html" class="card interns">
                         <button>INTERNS</button>
                     </a>
                 </div>
