--- a/html/ai.html
+++ b/html/ai.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Team | GATES Project</title>
-    <link rel="stylesheet" href="../css/ai.css">
-    <link rel="stylesheet" href="../css/header-footer.css">
-    <link rel="stylesheet" href="../css/our-team-modal.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/ai.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/our-team-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
   
 
-    <script src="../js/navbar-loader.js" defer></script>
-    <script src="../js/redirect.js" defer></script>
-    <script src="../js/our-team-modal.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/our-team-modal.js" defer></script>
 
 </head>
 
@@ -31,9 +30,9 @@
             qui officia deserunt mollit anim id est laborum.</p>
         <br>
 
-        <div class="card" style="background-image: url('../images/stock-1.jpg');">
+        <div class="card" style="background-image: url('../asti-gates-profile.github.io/images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('jasper-castro')">
-                <img class="profile-pic" src="../images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
                 <div class="profile-description">
                     <p class="name">Jasper Adrian Dwight V. Castro</p>
                     <p class="position">Project Technical Specialist IV - Natural Language Processing Engineer</p>
@@ -41,7 +40,7 @@
             </div>
 
             <div class="profile-card" onclick="showStaffModal('john-dumalag')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="John Bart C. Dumalag">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/josh.jpeg" alt="John Bart C. Dumalag">
                 <div class="profile-description">
                     <p class="name">John Bart C. Dumalag</p>
                     <p class="position">Position</p>
@@ -49,7 +48,7 @@
             </div>
 
             <div class="profile-card" onclick="showStaffModal('christopher-belaos')">
-                <img class="profile-pic" src="../images/ai-team_christopher-belaos.PNG" alt="Christopher Belaos">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/ai-team_christopher-belaos.PNG" alt="Christopher Belaos">
                 <div class="profile-description">
                     <p class="name">Christopher Belaos</p>
                     <p class="position">Project Technical Specialist III - AI Engineer</p>
@@ -57,9 +56,9 @@
             </div>
         </div>
 
-        <div class="card" style="background-image: url('../images/stock-2.jpg');">
+        <div class="card" style="background-image: url('../asti-gates-profile.github.io/images/stock-2.jpg');">
             <div class="profile-card" onclick="showStaffModal('alyssa-ocampo')">
-                <img class="profile-pic" src="../images/ai-team_alyssa_ocampo.png" alt="Alyssa Patricia B. Ocampo">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/ai-team_alyssa_ocampo.png" alt="Alyssa Patricia B. Ocampo">
                 <div class="profile-description">
                     <p class="name">Alyssa Patricia B. Ocampo</p>
                     <p class="position">Project Technical Specialist I - Data and Machine Learning Engineer</p>
@@ -67,7 +66,7 @@
             </div>
             
             <div class="profile-card" onclick="showStaffModal('norbert-ibera')">
-                <img class="profile-pic" src="../images/ai-team_norbert-ibera.jpeg" alt="Norbert John Ibera">
+                <img class="profile-pic" src="../asti-gates-profile.github.io/images/ai-team_norbert-ibera.jpeg" alt="Norbert John Ibera">
                 <div class="profile-description">
                     <p class="name">Norbert John Ibera</p>
                     <p class="position">Project Technical Assistant IV - Jr. Data Engineer</p>
