Updated incorrect links for deployment

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -160,8 +160,8 @@
                         </div>
                     </div>
 
-                    <link rel="stylesheet" href="../asti-gates-profile.github.io/stats.css">
-                    <script src="../asti-gates-profile.github.io/stats.js"></script>
+                    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/stats.css">
+                    <script src="../asti-gates-profile.github.io/js/stats.js"></script>
 
                 </div>
             </div>
@@ -169,19 +169,19 @@
             <section class="team">
                 <h2>LEARN MORE ABOUT THE TEAM</h2>
                 <div class="cards">
-                    <a href="../asti-gates-profile.github.io/ai.html" class="card ai">
+                    <a href="../asti-gates-profile.github.io/html/ai.html" class="card ai">
                         <button>AI</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/platform.html" class="card platform">
+                    <a href="../asti-gates-profile.github.io/html/platform.html" class="card platform">
                         <button>PLATFORM</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/lakehouse.html" class="card lakehouse">
+                    <a href="../asti-gates-profile.github.io/html/lakehouse.html" class="card lakehouse">
                         <button>LAKEHOUSE</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/management.html" class="card management">
+                    <a href="../asti-gates-profile.github.io/html/management.html" class="card management">
                         <button>MANAGEMENT</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/interns.html" class="card interns">
+                    <a href="../asti-gates-profile.github.io/html/interns.html" class="card interns">
                         <button>INTERNS</button>
                     </a>
                 </div>
