--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -8,7 +8,7 @@
   <title>Mission & Vision | GATES Project</title>
 
   <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
-  <link rel="stylesheet" href="../asti-gates-profile.github.io/css/mission-vision.css">
+  <link rel="stylesheet" href="../asti-gates-profile.github.io/asti-gates-profile.github.io/css/mission-vision.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
