Troubleshooting links for deployment

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -169,19 +169,19 @@
             <section class="team">
                 <h2>LEARN MORE ABOUT THE TEAM</h2>
                 <div class="cards">
-                    <a href="../asti-gates-profile.github.io/html/ai.html" class="card ai">
+                    <a href="ai.html" class="card ai">
                         <button>AI</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/html/platform.html" class="card platform">
+                    <a href="platform.html" class="card platform">
                         <button>PLATFORM</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/html/lakehouse.html" class="card lakehouse">
+                    <a href="lakehouse.html" class="card lakehouse">
                         <button>LAKEHOUSE</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/html/management.html" class="card management">
+                    <a href="management.html" class="card management">
                         <button>MANAGEMENT</button>
                     </a>
-                    <a href="../asti-gates-profile.github.io/html/interns.html" class="card interns">
+                    <a href="interns.html" class="card interns">
                         <button>INTERNS</button>
                     </a>
                 </div>
