--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -7,7 +7,7 @@
     <title>About GATES | DOST-ASTI</title>
     <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css" />
     <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css">
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/about-gates.css">
+    <link rel="stylesheet" href="../css/about-gates.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
